// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<WfHamburgerMenu
  workflowId={1}
>
  <UncontrolledDropdown>
    <Dropdown
      isOpen={false}
      tag="div"
      toggle={[Function]}
    >
      <div
        className="dropdown"
      >
        <DropdownToggle
          aria-haspopup={true}
          className="navbar-context-button"
          color="secondary"
          data-toggle="dropdown"
        >
          <Button
            aria-expanded={false}
            aria-haspopup="true"
            className="navbar-context-button"
            color="secondary"
            data-toggle="dropdown"
            onClick={[Function]}
            tag="button"
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="navbar-context-button btn btn-secondary"
              data-toggle="dropdown"
              onClick={[Function]}
              type="button"
            >
              <div
                className="button-icon icon-more-white"
              />
            </button>
          </Button>
        </DropdownToggle>
        <DropdownMenu
          right={true}
          tag="div"
        >
          <div
            aria-hidden={true}
            className="dropdown-menu dropdown-menu-right"
            role="menu"
            tabIndex="-1"
          >
            <div>
              <DropdownItem
                className="dropdown-menu-item"
                href="/account/logout"
                tag="a"
                toggle={true}
              >
                <a
                  className="dropdown-menu-item dropdown-item"
                  href="/account/logout"
                  onClick={[Function]}
                  tabIndex="0"
                >
                  <span
                    className="t-d-gray content-3 ml-3"
                  >
                    Logout
                  </span>
                </a>
              </DropdownItem>
            </div>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
  </UncontrolledDropdown>
</WfHamburgerMenu>
`;

exports[`renders correctly for workflows list page 1`] = `
<WfHamburgerMenu>
  <UncontrolledDropdown>
    <Dropdown
      isOpen={false}
      tag="div"
      toggle={[Function]}
    >
      <div
        className="dropdown"
      >
        <DropdownToggle
          aria-haspopup={true}
          className="navbar-context-button"
          color="secondary"
          data-toggle="dropdown"
        >
          <Button
            aria-expanded={false}
            aria-haspopup="true"
            className="navbar-context-button"
            color="secondary"
            data-toggle="dropdown"
            onClick={[Function]}
            tag="button"
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="navbar-context-button btn btn-secondary"
              data-toggle="dropdown"
              onClick={[Function]}
              type="button"
            >
              <div
                className="button-icon icon-more-white"
              />
            </button>
          </Button>
        </DropdownToggle>
        <DropdownMenu
          right={true}
          tag="div"
        >
          <div
            aria-hidden={true}
            className="dropdown-menu dropdown-menu-right"
            role="menu"
            tabIndex="-1"
          >
            <div>
              <DropdownItem
                className="dropdown-menu-item"
                href="/account/logout"
                tag="a"
                toggle={true}
              >
                <a
                  className="dropdown-menu-item dropdown-item"
                  href="/account/logout"
                  onClick={[Function]}
                  tabIndex="0"
                >
                  <span
                    className="t-d-gray content-3 ml-3"
                  >
                    Logout
                  </span>
                </a>
              </DropdownItem>
            </div>
          </div>
        </DropdownMenu>
      </div>
    </Dropdown>
  </UncontrolledDropdown>
</WfHamburgerMenu>
`;
